Avro Change Log

Trunk (not yet released)

  INCOMPATIBLE CHANGES

    AVRO-1334. Java: Update versions of many dependencies. (scottcarey, cutting)

  NEW FEATURES

    AVRO-1555.  C#: Add support for RPC over HTTP. (Dmitry Kovalev via cutting)

    AVRO-739. Add date, time, timestamp, and duration binary types to
    specification. (Dmitry Kovalev and Ryan Blue via tomwhite)

    AVRO-1590. Java: In resolving records in unions, permit structural
    and shortname matches when fullname matching fails.
    (Ryan Blue via cutting)

  OPTIMIZATIONS

  IMPROVEMENTS

    AVRO-843. C#: Change Visual Studio project files to specify .NET 3.5.
    (Dmitry Kovalev via cutting)

    AVRO-1583. Java: Add stdin support to the tojson tool.
    (Clément Mahtieu via cutting)

    AVRO-1551. Java: Add an output encoding option to the compiler
    command line tool. (Keegan Witt via cutting)

  BUG FIXES

    AVRO-1553. Java: MapReduce never uses MapOutputValueSchema (tomwhite)

    AVRO-1544. Java: Fix GenericData#validate for unions with null.
    (Matthew Hayes via cutting)

    AVRO-1589. Java: Fix ReflectData.AllowNulls to not create unions
    for primitive types. (Ryan Blue via cutting)

Avro 1.7.7 (23 July 2014)

  NEW FEATURES

    AVRO-1315. Java: Schema Validation utilities. (scottcarey and tomwhite)

    AVRO-1439. Java: Add AvroMultipleInputs for mapred. (Harsh J via cutting)

    AVRO-974. Add a Perl implementation of Avro. (Yann Kerhervé & John Karp)

    AVRO-1471. Java: Permit writing generated code in different
    character encodings. (Eugene Mustaphin via cutting)

    AVRO-1402. Add optional subtypes to specification, initially
    including a subtype of bytes and fixed for decimal values.
    (tomwhite & Ryan Blue via cutting)

    AVRO-1522. Java: Add support for compression codecs to SortedKeyValueFile.
    (Steven Willis via cutting)

    AVRO-1474. C++ resolvind decoder doesn't work when reader schema